--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -3,13 +3,16 @@
 
 <div class="row">
   <div class="col">
-    <shared-search-box (onSearchTerm)="searchByCapital($event)" placeholder="Buscar por capital"></shared-search-box>
+    <!-- (onSearchTerm)="searchByCapital($event)" -->
+    <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por capital"
+      [initialValue]="initialValue"></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
